# turm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dockerfile  flake.nix  justfile
.github/workflows/: release.yml  test.yml
src/: app.rs  file_watcher.rs  job_acct.rs  job_watcher.rs  main.rs  squeue_args.rs
