[package]
name = "turm"
version = "0.6.0"
authors = ["Karim Abou Zeid <contact@ka.codes>"]
description = "A TUI for the Slurm Workload Manager."
repository = "https://github.com/kabouzeid/turm"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
clap_complete = "4.2.0"
crossbeam = "0.8.2"
crossterm = "0.27.0"
lazy_static = "1.4.0"
notify = "6.1.1"
regex = "1.7.1"
ratatui = "0.23.0"
tempfile = "3.8.0"
