[package]
name = "turm"
version = "0.7.3"
authors = ["Karim Abou Zeid <contact@ka.codes>"]
description = "A TUI for the Slurm Workload Manager."
repository = "https://github.com/kabouzeid/turm"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
crossbeam = "0.8.4"
crossterm = "0.27.0"
itertools = "0.12.1"
lazy_static = "1.4.0"
notify = "6.1.1"
ratatui = "0.27.0"
regex = "1.10.4"
