[package]
name = "turm"
version = "0.7.3"
authors = ["Karim Abou Zeid <contact@ka.codes>"]
description = "A TUI for the Slurm Workload Manager."
repository = "https://github.com/kabouzeid/turm"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
crossbeam = "0.8.4"
crossterm = "0.29.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
notify = "8.0.0"
ratatui = "0.29.0"
regex = "1.11.1"
